--- a/about/index.html
+++ b/about/index.html
@@ -48,7 +48,7 @@
           Le Thi Nhung
         </a>
       </h1>
-      <p class="lead">Trời xanh mấy trắng , không có nắng vàng ......</p>
+      <p class="lead">Trời xanh , mây trắng , không có nắng vàng ....</p>
     </div>
 
     <nav class="sidebar-nav">
